# tfrecx

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
tests/: test_core.py
tfrecx/: __init__.py  cli.py  core.py  utils.py
tfrecx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
