[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfrecx"
version = "0.1.1"
description = "Elegant, production-ready toolkit for generating TFRecords from DataFrames, images, and more."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name="Khaled Alkhouli", email="khaled.alkhouli03@gmail.com"}
]
keywords = ["tensorflow", "tfrecord", "dataframe", "images", "machine-learning", "python", "deep-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "tensorflow>=2.16.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "Pillow>=9.0.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/Khoulii/tfrecx/tree/main"
Documentation = "https://github.com/Khoulii/tfrecx/blob/main/README.md"
Repository = "https://github.com/Khoulii/tfrecx"
BugTracker = "https://github.com/Khoulii/tfrecx/issues"

[project.scripts]
tfrx_csv2tfrec = "tfrecx.cli:csv2tfrec"
tfrx_json2tfrec = "tfrecx.cli:json2tfrec"
tfrx_head = "tfrecx.cli:head"
