[metadata]
name = tfrecx
version = 0.1.0
description = Elegant, production-ready toolkit for generating TFRecords from DataFrames, images, and more.
long_description = file: README.md
long_description_content_type = text/markdown
author = Khaled Alkhouli
author_email = khaled.alkhouli03@gmail.com
license = MIT
url = https://github.com/Khoulii/tfrecx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.12
install_requires =
    tensorflow>=2.20.0
    pandas>=2.3.3
    numpy>=2.3.3
    Pillow>=11.3.0

[options.packages.find]
exclude =
    tests*

